tests/expectations/compiler/constructor/admin_constructor.out
DCE_ENABLED:
Error [ETYC0372005]: Unknown variable `self`
    --> compiler-test:5:42
     |
   5 |         assert_eq(Program::program_owner(self), aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |                                          ^^^^
Error [ETYC0372126]: Expected a string literal
    --> compiler-test:5:42
     |
   5 |         assert_eq(Program::program_owner(self), aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |                                          ^^^^

DCE_DISABLED:
Error [ETYC0372005]: Unknown variable `self`
    --> compiler-test:5:42
     |
   5 |         assert_eq(Program::program_owner(self), aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |                                          ^^^^
Error [ETYC0372126]: Expected a string literal
    --> compiler-test:5:42
     |
   5 |         assert_eq(Program::program_owner(self), aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |                                          ^^^^
